# price_monitor

./: .claudeignore  .env.example  .gitignore  DEVELOPMENT.md  Dockerfile  INTERVIEW_PREP.md  PROGRESS.md  README.md  alembic.ini  docker-compose.yml  requirements.txt
alembic/: env.py
alembic/versions/: 20260408_0001_initial_schema.py  20260408_0002_rename_currunt_price_column.py  20260409_0003_add_user_qq_to_product.py
app/: database.py  main.py  models.py  notifications.py  redis_client.py  schemas.py  shemas.py  subscriber.py
app/routers/: debug.py  products.py  tasks.py
app/scrapers/: __init__.py  base.py  exceptions.py  steam.py
app/tasks/: __init__.py  price_checker.py  scheduler.py
bot/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  bot.py  pyproject.toml  requirements.txt
bot/src/plugins/: ai_chat.py  bili_video.py  like.py  price_alert.py  price_monitor.py
docs/: INDEX.md
docs/architecture/: INDEX.md  scraper-guide.md  sqlmodel-guide.md  task-module-guide.md
docs/archive/: INDEX.md
docs/data/: INDEX.md  datas_clean.csv
docs/deployment/: INDEX.md  docker-deployment.md  nonebot2-complete-guide.md  nonebot2-setup.md  qq-notification-explanation.md  redis-notification-guide.md
docs/getting-started/: INDEX.md  development.md  napcat-setup.md
docs/misc/: INDEX.md  ju-xue-li-persona.md
docs/project/: INDEX.md  implementation-progress.md  progress.md
scripts/: test_subscriber.py
tests/: test_bot_price_alert.py  test_notifications.py  test_price_checker.py  test_product_routes.py  test_task_routes.py
(+20 files in other folders)
