[project]
name = "price-monitor-bot"
version = "1.0.0"
description = "Price Monitor QQ Bot powered by NoneBot2"
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = { text = "MIT" }

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = []
plugin_dirs = ["src/plugins"]
builtin_plugins = ["echo"]

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "All"
typeCheckingMode = "basic"
